maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:25: error: type mismatch;
 found   : Unit
 required: Int
  if (murGauche && !estFaceMur())
  ^Escaper:43: error: not enough arguments for method setDirection: (x$1: plm.universe.Direction)Unit.
Unspecified value parameter x$1.
    setDirection()
                ^